#21 Fix backport launch